--- a/demo/src/main/webapp/index.html
+++ b/demo/src/main/webapp/index.html
@@ -1,207 +1,114 @@
+<!DOCTYPE html>
 <html>
 <head>
-<title>Symposium Registration Form</title>
-<style>
-body {
-    font-size: 16px;
-    font-family: "Segoe UI", "Helvetica Neue", Arial, sans-serif;
-    background:#56565b;
-}
-h2 {
-    text-align: center;
-    color:black;
-}
-form {
-    width: 300px;
-    background: #3c3c42;
-    padding: 15px 40px 40px;
-    border: 3px solid #ccc;
-    margin: 50px auto 0;
-    border-radius: 7px;
-}
-label {
-    
-    margin-bottom: 5px;
-    color:black;
+	<title>Registration</title>
+</head>
+<style type="text/css">
+	* {
+  margin: 0
 }
 
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  height: 100vh;
+  background-color: #6699cc;
+}
 
-input, select {
-    border: 1px solid #ccc;
-    padding: 10px;
-    display: block;
-    width: 100%;
-    box-sizing: border-box;
-    border-radius: 2px;
-    color:black;
+.container h1 {
+  color: white;
+  font-family: sans-serif;
+  margin: 20px;
 }
-.row {
-    padding-bottom: 10px;
+
+.registartion-form {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 600px;
+  color: rgb(255, 255, 255);
+  font-size: 18px;
+  font-family: sans-serif;
+  background-color: #154a68;
+  padding: 20px;
 }
-.form-inline {
-    border: 1px solid #ccc;
-    padding: 8px 10px 4px;
-    border-radius: 2px;
+
+.registartion-form input,
+.registartion-form select,
+.registartion-form textarea {
+  border: none;
+  padding: 5px;
+  margin-top: 10px;
+  font-family: sans-serif;
 }
-.form-inline label, .form-inline input {
-    display: inline-block;
-    width: auto;
-    padding-right: 15px;
-}
-.error {
-    color: red;
-    font-size: 90%;
-}
-input[type="submit"] {
-    font-size: 110%;
-    font-weight: 100;
-    background: black;
-    border-color: gray;
-    box-shadow: 0 3px 0 black;
-    color: #fff;
-    margin-top: 10px;
-    cursor: pointer;
-}
-input[type="submit"]:hover {
-    background: gray;
+
+.registartion-form .submit {
+  width: 100%;
+  padding: 8px 0;
+  font-size: 20px;
+  color: rgb(44, 44, 44);
+  background-color: #3BA5D3;
+  border-radius: 5px;
 }
 
 </style>
-
-<script>
-function validateForm(){
-var fname=document.sympoForm.fname.value;
-var reg=document.sympoForm.reg.value;
-var cname=document.sympoForm.cname.value;
-var dept=document.sympoForm.dept.value;
-var email=document.sympoForm.email.value;
-var mobile=document.sympoForm.mobile.value;
-var gender = document.sympoForm.gender.value;
-var event=document.sympoForm.event.value;
-
-if(fname=="")
-{
-alert("Please enter your first name");
-return false;
-}else{
-var regex=/^[a-zA-Z\s]+$/;
-if(regex.test(fname)==false){
-alert("Please enter a valid name");
-return false;
-}
-}
-if(reg=="")
-{
-alert("Please enter your register number");
-return false;
-}
-
-if(cname=="")
-{
-alert("Please enter your college name");
-return false;
-}
-
-if(dept == "Select") {
-        alert("Please select your department");
-        return false;
-    } 
-if(email == "") {
-        alert("Please enter your email address");
-        return false;
-    } else {
-        var regex = /^\S+@\S+\.\S+$/;
-        if(regex.test(email) === false) {
-            alert("Please enter a valid email address");
-            return false;
-        }
-    }
-    if(mobile == "") {
-        alert("Please enter your mobile number");
-        return false;
-    } else {
-        var regex = /^[1-9]\d{9}$/;
-        if(regex.test(mobile) === false) {
-            alert("Please enter a valid 10 digit mobile number");
-            return false;
-        } 
-    }
-if(gender == "") {
-        alert("Please select your gender");
-return false;
-    } 
-if(event == "Select") {
-        alert("Please select one event");
-        return false;
-} 
-}
-</script>
-</head>
 <body>
-<form name="sympoForm" method="post" action="FormValidation">
-    <h2>Symposium Registration Form</h2>
-    <div class="row">
-        <label>First Name</label>
-        <input type="text" name="fname">
-        <div class="error" id="fnameErr"></div>
-    </div>
-    <div class="row">
-        <label>Register Number</label>
-        <input type="text" name="reg">
-        <div class="error" id="regErr"></div>
-    </div>
-    <div class="row">
-        <label>College Name</label>
-        <input type="text" name="cname">
-        <div class="error" id="cnameErr"></div>
-    </div>
-    <div class="row">
-        <label>Department</label>
-        <select name="dept">
-            <option>Select</option>
-            <option>CSE</option>
-            <option>ECE</option>
-            <option>IT</option>
-            <option>EEE</option>
-            <option>MECH</option>
-	    <option>CIVIL</option>
-        </select>
-        <div class="error" id="deptErr"></div>
-    </div>
-    <div class="row">
-        <label>Email</label>
-        <input type="text" name="email">
-        <div class="error" id="emailErr"></div>
-    </div>
-        <div class="row">
-        <label>Mobile Number</label>
-        <input type="text" name="mobile" maxlength="10">
-        <div class="error" id="mobileErr"></div>
-    </div>
-        <div class="row">
-        <label>Gender</label>
-        <div class="form-inline">
-            <label><input type="radio" name="gender" value="male"> Male</label>
-            <label><input type="radio" name="gender" value="female"> Female</label>
-        </div>
-        <div class="error" id="genderErr"></div>
-    </div>
-     
-<div class="row">
-        <label>Events</label>
-        <select name="event">
-            <option>Select</option>
-            <option>Depate</option>
-            <option>Photoshoot</option>
-            <option>Pencil sketch</option>
-            <option>Paper Presentation</option>
-            <option>Cook without fore</option>
-        </select>
-        <div class="error" id="eventErr"></div>
-    </div>
-    <div class="row">
-        <input type="submit"  value="Register">
-    </div>
-</form>
+<div class="container">
+  <h1>Registration Form </h1>
+  <form name="registration" class="registartion-form" method="post" action="FormValidation">
+    <table>
+      <tr>
+        <td><label>Name:</label></td>
+        <td><input type="text" name="name" id="name" placeholder="name..."></td>
+      </tr>
+      <tr>
+        <td><label>Email:</label></td>
+        <td><input type="text" name="email" id="email" placeholder="email..."></td>
+      </tr>
+      <tr>
+        <td><label>Password:</label></td>
+        <td><input type="password" name="password" id="password" ></td>
+      </tr>
+      <tr>
+        <td><label>Phone Number:</label></td>
+        <td><input type="number" name="phonenumber" id="phoneNumber" placeholder="Phone Number..."></td>
+      </tr>
+      <tr>
+        <td><label>Gender:</label></td>
+        <td>Male: <input type="radio" name="gender" value="male">
+          Female: <input type="radio" name="gender" value="female">
+          Other: <input type="radio" name="gender" value="other"></td>
+      </tr>
+      <tr>
+        <td><label>language</label></td>
+        <td>
+          <select name="language" id="language">
+            <option value="">Select language</option>
+            <option value="English">Tamil</option>
+            <option value="Spanish">English</option>
+            <option value="Hindi">Malayalam</option>
+            <option value="Arabic">Arabic</option>
+            <option value="Russian">Russian</option>
+          </select>
+        </td>
+      </tr>
+      <tr>
+        <td><label>Zip Code:</label></td>
+        <td><input type="number" name="zipcode" id="zipcode"></td>
+      </tr>
+      <tr>
+        <td><label>About:</label></td>
+        <td><textarea name="about" id="about" placeholder="Write about yourself..."></textarea></td>
+      </tr>
+      <tr>
+        <td colspan="2"><input type="submit" class="submit" value="Register" /></td>
+      </tr>
+    </table>
+  </form>
+</div>
+
+
 </body>
 </html>
