--- a/CRUD/src/main/webapp/frontpage.html
+++ b/CRUD/src/main/webapp/frontpage.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <h1>Registration Form </h1>
-  <form method="get" action="/frontservelet">
+  <form method="get" action="./frontservelet">
     <table>
       <tr>
         <td><label>Name:</label></td>
