--- a/CRUD/src/main/webapp/index.html
+++ b/CRUD/src/main/webapp/index.html
@@ -58,7 +58,7 @@
 <body>
 <div class="container">
   <h1>Registration Form </h1>
-  <form name="registration" class="registartion-form" method="post" action="FormValidation">
+  <form name="registration" class="registartion-form" method="post" action="/FormValidation">
     <table>
       <tr>
         <td><label>Name:</label></td>
